Fixed movie poster stretched height

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -35,10 +35,14 @@ body {
   overflow-x: scroll;
 }
 
-.h-100 {
+.h-full {
   height: 100%;
 }
 
 .w-60 {
   width: 15rem;
+}
+
+.h-80 {
+  height: 20rem;
 }
